Tags
* tinybird planning doc

* tags

* add border

* get tags and search working

* fix build
